Fixes invisible links in main menu

--- a/wp-content/themes/municipio-highschool/assets/source/sass/components/navigation/_navbar.scss
+++ b/wp-content/themes/municipio-highschool/assets/source/sass/components/navigation/_navbar.scss
@@ -7,6 +7,8 @@
    ========================================================================== */
 
 &.page:not(.home) .navbar-sticky:not(.sticky) a,
-&.search:not(.home) .navbar-sticky:not(.sticky) a {
+&.search:not(.home) .navbar-sticky:not(.sticky) a,
+&.single:not(.home) .navbar-sticky:not(.sticky) a,
+&.archive:not(.home) .navbar-sticky:not(.sticky) a {
     color: $black;
 }
